<resources>
    <string name="app_name">WineLog</string>
    <string name="hint_text_wine_name">Wine Name</string>
    <string name="hint_text_year">Year</string>
    <string name="hint_text_wineryName">Winery Name</string>
    <string name="hint_text_date_of_visit">Date of Visit</string>
    <string name="label_category">Category</string>
    <string name="label_type">Type</string>
    <string name="error_select_category">Category cannot be empty</string>

    <string name="label_style">Style</string>
    <string name="style_light">Light-Bodied &amp; Fruity</string>
    <string name="style_medium">Medium-Bodied &amp; Fruity</string>
    <string name="style_full_smooth">Full-Bodied &amp; Smooth</string>
    <string name="style_full_firm">Full-Bodied &amp; Firm</string>

    <string name="label_oak">Oak</string>
    <string name="oak_none">None</string>
    <string name="oak_subtle">Subtle</string>
    <string name="oak_intense">Intense</string>

    <string name="label_flavour_intensity">Flavour Intensity</string>
    <string name="flavour_mild">Mild</string>
    <string name="flavour_medium">Medium</string>
    <string name="flavour_bold">Bold</string>

    <string name="hint_text_main_flavours">Main Flavours</string>
    <string name="label_rating">Rating</string>
    <string name="hint_text_notes">Notes</string>

    <string name="button_label_add">Add</string>
    <string name="new_entry">New</string>
    <string name="edit_wine">Edit</string>

    <string name="expanded_image">Expanded Image</string>
    <string name="image">Image</string>

    <string name="api_key">AIzaSyCmaDwi0IOglBttcKBtG7Tcvcktk8wq07Q</string>
    <string name="winery_name_location">Winery Name / Location</string>

    <string name="winelog_project">WineLog Project</string>
    <string name="about">About</string>
    <string name="author">"Fulya Demirkan,\nhttps://fulya.demirkan.info/ \n\nAugusto A. P. Goncalez, \nhttp://www.augustoapg.com/\n\nSheridan College, 2019"</string>

    <string name="action_add_sample_data">Add Sample Data</string>

    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_one_confirmation">Do you want to delete this wine?</string>
    <string name="delete_all_confirmation">Do you want to delete all wines?</string>

    <string name="autocomplete_hint">Location name or address</string>
    <string-array name="types">
        <item>Select One...</item>
        <item>Baco Noir</item>
        <item>Barbera</item>
        <item>Cabernet Franc</item>
        <item>Cabernet Sauvignon</item>
        <item>Carmenere</item>
        <item>Cayuga White</item>
        <item>Chardonnay</item>
        <item>Gamay</item>
        <item>Gewurztraminer</item>
        <item>L’Acadie</item>
        <item>Malbec</item>
        <item>Marechal Foch</item>
        <item>Merlot</item>
        <item>Pinot Gris</item>
        <item>Pinot Noir</item>
        <item>Reichensteiner</item>
        <item>Riesling</item>
        <item>Sauvignon Blanc</item>
        <item>Sémillon</item>
        <item>Seyval Blanc</item>
        <item>Zinfandel</item>
        <item>Other</item>
    </string-array>

    <string-array name="categories">
        <item>Select One...</item>
        <item>Red Wine</item>
        <item>White Wine</item>
        <item>Rosé Wine</item>
        <item>Ice Wine</item>
        <item>Sparkling Wine</item>
        <item>Fortified Wine</item>
        <item>Desert Wine</item>
        <item>Other</item>
    </string-array>
</resources>
